# ROCm-playground

./: .gitignore  CMakeLists.txt  Makefile  README.md  test_pytorch.py  vector_addition.hip
